# agent-tracer

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml  run.rpack
examples/: anthropic_agent.py  simple_agent.py  tool_agent.py
tests/: test_adapter.py  test_anthropic_adapter.py  test_cli.py  test_recorder.py  test_replay.py  test_schema.py
tracer/: __init__.py  cli.py  recorder.py  replay.py  schema.py
tracer/adapters/: anthropic_adapter.py  openai_adapter.py
